Resources/SDGSwiftSource/Syntax Highlighting.css
/*
 Syntax Highlighting.css

 This source file is part of the SDGSwift open source project.
 https://sdggiesbrecht.github.io/SDGSwift/SDGSwift

 Copyright ©2018 Jeremy David Giesbrecht and the SDGSwift project contributors.

 Soli Deo gloria.

 Licensed under the Apache Licence, Version 2.0.
 See http://www.apache.org/licenses/LICENSE-2.0 for licence information.
 */

/* Layout */

.swift {
    display: inline;
}
.swift.blockquote {
    display: block;
    margin: 1.4em 0;
    border: 1px solid;
     border-radius: 0.35294em;
    padding: 0.35294em 0.94118em;
}

/* Colour */

.swift.blockquote {
    background-color: #F9FAFA;
    border-color:  #E6E6E6;
}
.swift {
    color: #000000;
}

.swift .keyword {
    color: #AA0D91;
}

.swift .punctuation {
    color: #000000;
}

.swift .external.identifier {
    color: #5C2699;
}
.swift .internal.identifier {
    color: #3F6E74;
}

.swift .number {
    color: #0E0EFF;
}

.swift .compilation‐condition {
    color: #643820;
}

.swift .comment {
    color: #007400;
}
.swift .comment‐punctuation {
    color: #003A00;
}
.swift .url {
    color: #0E0EFF;
}

/* Font */

.swift {
    font-family: "SF Mono", Menlo, monospace, "SF Pro Icons";
    letter-spacing: -0.027em;
    line-height: 1.26667;
}

.swift .text {
    font-family: "SF Pro Text", "SF Pro Icons", "-apple-system", "BlinkMacSystemFont", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    letter-spacing: 0;
}

.swift .url:link, .swift .url:visited {
    text-decoration: none;
}
.swift .url:hover {
    text-decoration: underline;
}

